# clearskies-module-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  README.md  copier.yaml  pyproject.toml  ty.toml
.github/workflows/: create-version.yaml
migrations/: update_pyproject_linter_tooling.py
template_content/: .pre-commit-config.yaml.jinja  .python-version.jinja  LICENSE.jinja  README.md.jinja  pyproject.toml.jinja  ty.toml.jinja
template_content/.github/workflows/: create-version.yaml.jinja  docs.yaml.jinja
template_content/docs/jekyll/: _config.yml.jinja
template_content/docs/jekyll/_includes/: head_custom.html.jinja
template_content/docs/python/: update_manifest.py
template_content/src/{{ package_name }}/: __init__.py.jinja
tests/: test_copier.py
