[project]
name = "template"
version = "0.0.41"
description = "A copier template for Clearskies modules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[tool.black]
line-length = 120
skip-magic-trailing-comma = false
preview = false

[dependency-groups]
dev = [
    "clear-skies>=2.0.6",
    "clear-skies-doc-builder>=2.0.4",
]


