[project]
version = "0.0.48"
name = "clearskies-module-template"
description = "A copier template for Clearskies modules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ty>=0.0.35",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[dependency-groups]
dev = [
    "clear-skies>=2.0.6",
    "clear-skies-doc-builder>=2.0.4",
]
